Integrado com api futebol para atualizar os jogos

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ DATABASE_PORT=3306
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=123456
 DATABASE_DATABASE=bolao
+
+API_FUTEBOL_ENDPOINT=https://api-football-v1.p.rapidapi.com/v3/
+API_FUTEBOL_KEY=448081ddc3msh01c72b9c0957939p1f240bjsn683c8ca30f8f
